@@ -38,10 +38,12 @@ void i_silc_message_send(struct gateway_connection *gwconn, struct event *event)
 	struct presence *presence;
 	const char *msg = event_get(event, EVENT_MSG);
 	const char *channel = event_get(event, EVENT_KEY_CHANNEL_NAME);
-	const char *target = event_get(event, "target");
+	const char *target = event_get(event, "presence");
 	const char *type = event_get(event, "type");
 	struct i_silc_channel_connection *silc_chconn;
 	SilcMessageFlags sendflags = SILC_MESSAGE_FLAG_UTF8;
+	SilcClientEntry target_entry = NULL;
+	bool success;
 
 	i_assert(channel != NULL);
 
@@ -65,9 +67,43 @@ void i_silc_message_send(struct gateway_connection *gwconn, struct event *event)
 	if( !client_command_get_network_presence(event, &network, &presence) )
 		return;
 
-	silc_client_send_channel_message(silc_gwconn->client,
-				silc_gwconn->conn, 
-				silc_chconn->channel_entry,
-				NULL, sendflags, (unsigned char *)msg,
-				strlen(msg), FALSE);
+	/* At this point we know that either channel or target are given to us,
+	 * so we can do this. Channel takes priority if both are specified. */
+	if( *channel != '\0' ) {
+		success = silc_client_send_channel_message(silc_gwconn->client,
+										silc_gwconn->conn, silc_chconn->channel_entry,
+										silc_chconn->channel_entry->curr_key, sendflags,
+										(unsigned char *)msg,	strlen(msg), FALSE);
+	} else {
+		silc_client_get_clients_whois(silc_gwconn->client, silc_gwconn->conn,
+										target, NULL, NULL, (SilcGetClientCallback)i_silc_privmsg_whois_callback,
+										(void *)target_entry);
+		if( target_entry == NULL ) {
+			/* Couldn't find such target, error to client and return */
+			client_command_error(event, CLIENT_CMDERR_NOT_FOUND);
+			return;
+		}
+
+		success = silc_client_send_private_message(silc_gwconn->client,
+										silc_gwconn->conn, target_entry, sendflags,
+										(unsigned char *)msg, strlen(msg), FALSE);
+	}
+
+	if( !success )
+		client_command_error(event, CLIENT_CMDERR_UNKNOWN);
 }
+
+/* Return first found entry */
+void *i_silc_privmsg_whois_callback(SilcClient client,
+				SilcClientConnection conn, SilcClientEntry *clients, SilcUInt32 count,
+				void *target_entry)
+{
+	if( clients == NULL ) {
+		target_entry = NULL;
+		return NULL;
+	}
+
+	target_entry = clients[0];
+	return NULL;
+}
+	
